--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -27,7 +27,6 @@
 	PreviewDragOver="Window_PreviewDragOver"
 	MouseDown="Window_MouseDown"
 	StateChanged="Window_StateChanged" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Deactivated="Window_Deactivated" Activated="Window_Activated"
 	TextOptions.TextFormattingMode="Display">
 	<Window.Resources>
 		<converters:ChapterVMConverter x:Key="ChapterVMConverter" />
@@ -604,118 +603,135 @@
 					</Grid.RowDefinitions>
 
 					<TextBlock
-						HorizontalAlignment="Right" Margin="0,0,10,0"
+						HorizontalAlignment="Right" Margin="0,4,10,0" VerticalAlignment="Top"
 						Text="{x:Static res:MainRes.VideoLabel}"
 						Style="{StaticResource EmphasizedTitle}"
 						Grid.Row="0" Grid.Column="0" />
-					<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1" >
-						<StackPanel Orientation="Horizontal" Visibility="{Binding TitleVisible, Converter={StaticResource VisibilityConverter}}">
-							<TextBlock Text="{x:Static res:MainRes.TitleLabel}" Style="{StaticResource PlainTitle}" />
-							<ComboBox ItemsSource="{Binding Titles}" SelectedItem="{Binding SelectedTitle}" Height="23" VerticalAlignment="Center" MinWidth="102">
-								<ComboBox.ItemTemplate>
-									<DataTemplate>
-										<TextBlock Text="{Binding Display}" Style="{StaticResource PlainTitle}" />
-									</DataTemplate>
-								</ComboBox.ItemTemplate>
-							</ComboBox>
-							<Polygon Style="{StaticResource ArrowSeparator}" />
-						</StackPanel>
-						<StackPanel Orientation="Horizontal" Visibility="{Binding AngleVisible, Converter={StaticResource VisibilityConverter}}">
-							<TextBlock Text="{x:Static res:MainRes.AngleLabel}" Style="{StaticResource PlainTitle}" />
-							<ComboBox ItemsSource="{Binding Angles}" SelectedItem="{Binding Angle}" Width="32" Height="23" VerticalAlignment="Center" />
-							<Polygon Style="{StaticResource ArrowSeparator}" />
-						</StackPanel>
-						<StackPanel
-							Name="rangeUI"
-							Orientation="Horizontal"
-							MouseEnter="RangeMouseEnter" MouseLeave="RangeMouseLeave"
-							Background="Transparent">
-							<ComboBox
-								Height="23" VerticalAlignment="Center" Margin="4,0,10,0" HorizontalAlignment="Left"
-								MinWidth="75"
-								ItemsSource="{Binding DisplayNames, Source={StaticResource VideoRangeTypeChoices}}"
-								SelectedValue="{Binding RangeType, Converter={StaticResource VideoRangeTypeChoices}}"
-								GotFocus="RangeControlGotFocus" LostFocus="RangeControlLostFocus" />
-							<StackPanel
-								Orientation="Horizontal"
-								Visibility="{Binding ChaptersRangeVisible, Converter={StaticResource VisibilityConverter}}">
-								<ComboBox
-									MinWidth="38" Height="23"
-									ItemsSource="{Binding StartChapters}" SelectedItem="{Binding SelectedStartChapter}" Style="{StaticResource ChapterComboBox}"
-									GotFocus="RangeControlGotFocus" LostFocus="RangeControlLostFocus"
-									ItemContainerStyle="{StaticResource ChapterComboBoxItem}">
-								</ComboBox>
-								<TextBlock Text="-" Style="{StaticResource PlainTitle}" />
-								<ComboBox
-									MinWidth="38" Height="23"
-									ItemsSource="{Binding EndChapters}" SelectedItem="{Binding SelectedEndChapter}" Style="{StaticResource ChapterComboBox}"
-									GotFocus="RangeControlGotFocus" LostFocus="RangeControlLostFocus"
-									ItemContainerStyle="{StaticResource ChapterComboBoxItem}"/>
-							</StackPanel>
-							<StackPanel
-								Orientation="Horizontal"
-								Visibility="{Binding SecondsRangeVisible, Converter={StaticResource VisibilityConverter}}">
-								<controls:NumberBox
-									Width="55"
-									Style="{StaticResource RangeNumberBox}"
-									AllowEmpty="False" Minimum="0" Modulus="0.001"
-									ShowIncrementButtons="False"
-									Number="{Binding SecondsRangeStart, Mode=TwoWay}"
-									GotFocus="SecondsStartGotFocus" LostFocus="RangeControlLostFocus"/>
-								<TextBlock Text="-" Style="{StaticResource PlainTitle}" />
-								<controls:NumberBox
-									Width="55"
-									Style="{StaticResource RangeNumberBox}"
-									AllowEmpty="False" Minimum="0.25" Modulus="0.001"
-									ShowIncrementButtons="False"
-									Number="{Binding SecondsRangeEnd, Mode=TwoWay}"
-									GotFocus="SecondsEndGotFocus" LostFocus="RangeControlLostFocus"/>
-							</StackPanel>
-							<StackPanel
-								Orientation="Horizontal"
-								Visibility="{Binding FramesRangeVisible, Converter={StaticResource VisibilityConverter}}">
-								<controls:NumberBox
-									Width="65"
-									Style="{StaticResource RangeNumberBox}"
-									AllowEmpty="False" Minimum="0"
-									Number="{Binding FramesRangeStart, Mode=TwoWay}"
-									GotFocus="FramesStartGotFocus" LostFocus="RangeControlLostFocus"/>
-								<TextBlock Text="-" Style="{StaticResource PlainTitle}" />
-								<controls:NumberBox
-									Width="65"
-									Style="{StaticResource RangeNumberBox}"
-									AllowEmpty="False" Minimum="1"
-									Number="{Binding FramesRangeEnd, Mode=TwoWay}"
-									GotFocus="FramesEndGotFocus" LostFocus="RangeControlLostFocus"/>
-							</StackPanel>
-							<TextBlock Text="{Binding TotalChaptersText}" Style="{StaticResource PlainTitle}" />
-						</StackPanel>
-						<Popup
-							Name="rangeDetailsPopup" IsOpen="False"
-							PlacementTarget="{Binding ElementName=rangeUI}"
-							Placement="Right"
-							HorizontalOffset="4"
-							VerticalOffset="-16"
-							AllowsTransparency="True">
-							<ContentControl Template="{StaticResource PopupInfoTemplate}">
-								<StackPanel
-									Orientation="Vertical"
-									Margin="4">
-									<TextBlock
-										Text="{Binding RangePreviewText}"
-										HorizontalAlignment="Center"/>
-									<controls:RangeBar
-										Duration="{Binding SelectedTitle.Duration}"
-										StartTime="{Binding RangePreviewStart}" EndTime="{Binding RangePreviewEnd}"
-										Width="200" Height="15" HorizontalAlignment="Center"
-										Margin="2"
-										/>
-									<TextBlock
-										Text="{Binding RangePreviewLengthText}"
-										HorizontalAlignment="Center"/>
+					<StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="1">
+						<Grid>
+							<StackPanel Orientation="Horizontal">
+								<StackPanel Orientation="Horizontal" Visibility="{Binding TitleVisible, Converter={StaticResource VisibilityConverter}}">
+									<TextBlock Text="{x:Static res:MainRes.TitleLabel}" Style="{StaticResource PlainTitle}" />
+									<ComboBox ItemsSource="{Binding Titles}" SelectedItem="{Binding SelectedTitle}" Height="23" VerticalAlignment="Center" MinWidth="102">
+										<ComboBox.ItemTemplate>
+											<DataTemplate>
+												<TextBlock Text="{Binding Display}" Style="{StaticResource PlainTitle}" />
+											</DataTemplate>
+										</ComboBox.ItemTemplate>
+									</ComboBox>
 								</StackPanel>
-							</ContentControl>
-						</Popup>
+								<StackPanel Orientation="Horizontal" Visibility="{Binding AngleVisible, Converter={StaticResource VisibilityConverter}}">
+									<Polygon Style="{StaticResource ArrowSeparator}" />
+									<TextBlock Text="{x:Static res:MainRes.AngleLabel}" Style="{StaticResource PlainTitle}" />
+									<ComboBox ItemsSource="{Binding Angles}" SelectedItem="{Binding Angle}" Width="32" Height="23" VerticalAlignment="Center" />
+								</StackPanel>
+							</StackPanel>
+							<StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+								<TextBlock
+									Text="{Binding RangePreviewText}"
+									VerticalAlignment="Bottom"/>
+								<TextBlock
+									Text="{Binding RangePreviewLengthText}"
+									VerticalAlignment="Bottom" Margin="20,0,0,0"/>
+							</StackPanel>
+						</Grid>
+
+
+						<Grid Margin="0,3,0,0" UseLayoutRounding="True">
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="Auto" />
+								<ColumnDefinition />
+							</Grid.ColumnDefinitions>
+							<StackPanel
+								Name="rangeUI"
+								Orientation="Horizontal"
+								Background="Transparent">
+								<ComboBox
+									Height="23" VerticalAlignment="Center" Margin="4,0,10,0" HorizontalAlignment="Left"
+									MinWidth="75"
+									ItemsSource="{Binding DisplayNames, Source={StaticResource VideoRangeTypeChoices}}"
+									SelectedValue="{Binding RangeType, Converter={StaticResource VideoRangeTypeChoices}}" />
+								<StackPanel
+									Orientation="Horizontal"
+									Visibility="{Binding ChaptersRangeVisible, Converter={StaticResource VisibilityConverter}}">
+									<ComboBox
+										MinWidth="40" Height="23"
+										ItemsSource="{Binding StartChapters}" SelectedItem="{Binding SelectedStartChapter}" Style="{StaticResource ChapterComboBox}"
+										ItemContainerStyle="{StaticResource ChapterComboBoxItem}">
+									</ComboBox>
+									<TextBlock Text="-" Style="{StaticResource PlainTitle}" />
+									<ComboBox
+										MinWidth="40" Height="23"
+										ItemsSource="{Binding EndChapters}" SelectedItem="{Binding SelectedEndChapter}" Style="{StaticResource ChapterComboBox}"
+										ItemContainerStyle="{StaticResource ChapterComboBoxItem}"/>
+								</StackPanel>
+								<StackPanel
+									Orientation="Horizontal"
+									Visibility="{Binding SecondsRangeVisible, Converter={StaticResource VisibilityConverter}}">
+									<controls:NumberBox
+										Width="55"
+										Style="{StaticResource RangeNumberBox}"
+										AllowEmpty="False" Minimum="0" Modulus="0.001"
+										ShowIncrementButtons="False"
+										Number="{Binding SecondsRangeStart, Mode=TwoWay}"/>
+									<TextBlock Text="-" Style="{StaticResource PlainTitle}" />
+									<controls:NumberBox
+										Width="55"
+										Style="{StaticResource RangeNumberBox}"
+										AllowEmpty="False" Minimum="0.25" Modulus="0.001"
+										ShowIncrementButtons="False"
+										Number="{Binding SecondsRangeEnd, Mode=TwoWay}"/>
+								</StackPanel>
+								<StackPanel
+									Orientation="Horizontal"
+									Visibility="{Binding FramesRangeVisible, Converter={StaticResource VisibilityConverter}}">
+									<controls:NumberBox
+										Width="65"
+										Style="{StaticResource RangeNumberBox}"
+										AllowEmpty="False" Minimum="0"
+										Number="{Binding FramesRangeStart, Mode=TwoWay}"/>
+									<TextBlock Text="-" Style="{StaticResource PlainTitle}" />
+									<controls:NumberBox
+										Width="65"
+										Style="{StaticResource RangeNumberBox}"
+										AllowEmpty="False" Minimum="1"
+										Number="{Binding FramesRangeEnd, Mode=TwoWay}"/>
+								</StackPanel>
+								<TextBlock Text="{Binding TotalChaptersText}" Style="{StaticResource PlainTitle}" />
+							</StackPanel>
+							<controls:ChapterBar 
+								Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,0,0,0"
+								Start="{Binding ChapterPreviewStart, Mode=TwoWay}" End="{Binding ChapterPreviewEnd, Mode=TwoWay}" 
+								Chapters="{Binding SelectedTitle.Chapters}"
+								Height="22" />
+							<!--<Popup
+								Name="rangeDetailsPopup" IsOpen="False"
+								PlacementTarget="{Binding ElementName=rangeUI}"
+								Placement="Right"
+								HorizontalOffset="4"
+								VerticalOffset="-16"
+								AllowsTransparency="True">
+								<ContentControl Template="{StaticResource PopupInfoTemplate}">
+									<StackPanel
+										Orientation="Vertical"
+										Margin="4">
+										<TextBlock
+											Text="{Binding RangePreviewText}"
+											HorizontalAlignment="Center"/>
+										<controls:RangeBar
+											Duration="{Binding SelectedTitle.Duration}"
+											StartTime="{Binding RangePreviewStart}" EndTime="{Binding RangePreviewEnd}"
+											Width="200" Height="15" HorizontalAlignment="Center"
+											Margin="2"
+											/>
+										<TextBlock
+											Text="{Binding RangePreviewLengthText}"
+											HorizontalAlignment="Center"/>
+									</StackPanel>
+								</ContentControl>
+							</Popup>-->
+						</Grid>
+
 					</StackPanel>
 
 					<TextBlock
