--- a/VidCoder/Controls/RangeBar.xaml
+++ b/VidCoder/Controls/RangeBar.xaml
@@ -1,29 +1,88 @@
-﻿<UserControl x:Class="VidCoder.Controls.RangeBar"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="15" d:DesignWidth="300">
-	<Border
-		BorderBrush="Black" BorderThickness="1"
-		CornerRadius="4">
-		<Grid>
+﻿<UserControl 
+	x:Class="VidCoder.Controls.RangeBar"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	MouseLeftButtonDown="ChapterBar_OnMouseLeftButtonDown"
+	MouseLeftButtonUp="ChapterBar_OnMouseLeftButtonUp"
+	MouseRightButtonDown="ChapterBar_OnMouseRightButtonDown"
+	MouseRightButtonUp="ChapterBar_OnMouseRightButtonUp"
+	MouseMove="ChapterBar_OnMouseMove"
+	mc:Ignorable="d" 
+	d:DesignHeight="41" d:DesignWidth="300">
+	<UserControl.Resources>
+		<Style x:Key="SeekBarTick" TargetType="Polygon">
+			<Setter Property="Points" Value="0,0 0,3 1,3 1,0" />
+			<Setter Property="Fill" Value="Black" />
+			<Setter Property="HorizontalAlignment" Value="Left" />
+			<Setter Property="VerticalAlignment" Value="Top" />
+			<Setter Property="Opacity" Value="0.7" />
+		</Style>
+		<Style x:Key="SeekBarBigTick" TargetType="Polygon">
+			<Setter Property="Points" Value="0,0 0,6 1,6 1,0" />
+			<Setter Property="Fill" Value="Black" />
+			<Setter Property="HorizontalAlignment" Value="Left" />
+			<Setter Property="VerticalAlignment" Value="Top" />
+			<Setter Property="Opacity" Value="0.7" />
+		</Style>
+	</UserControl.Resources>
+	<Grid UseLayoutRounding="True">
+		<Border
+			BorderBrush="#ACACAC"
+			BorderThickness="1">
+			<Border.Background>
+				<LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+					<GradientStop Offset="0" Color="#E6E6E6" />
+					<GradientStop Offset="1" Color="#E0E0E0" />
+				</LinearGradientBrush>
+			</Border.Background>
+		</Border>
+		<Grid 
+			Margin="1"
+			Name="barHolder"
+			SizeChanged="BarHolder_OnSizeChanged"
+			HorizontalAlignment="Stretch">
 			<Grid.ColumnDefinitions>
-				<ColumnDefinition Name="beforeColumn" />
-				<ColumnDefinition Name="filledColumn" />
-				<ColumnDefinition Name="afterColumn" />
+				<ColumnDefinition Name="preColumn" Width="30*" />
+				<ColumnDefinition Name="rangeColumn" Width="30*" />
+				<ColumnDefinition Name="postColumn" Width="30*" />
 			</Grid.ColumnDefinitions>
 			<Border
-				Name="filledRangeBorder"
-				Grid.Column="1">
-				<Border.Background>
-					<LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-						<GradientStop Color="#6DAAED" Offset="0.0" />
-						<GradientStop Color="#3180CE" Offset="1.0" />
-					</LinearGradientBrush>
-				</Border.Background>
+				Name="seekBarFilledBorder"
+				Grid.Column="1"
+				CornerRadius="0,0,0,0">
+				<Border.Style>
+					<Style TargetType="Border">
+						<Style.Triggers>
+							<DataTrigger Binding="{Binding IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" Value="True">
+								<Setter Property="Background">
+									<Setter.Value>
+										<LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+											<GradientStop Color="#8FBCF7" Offset="0.0" />
+											<GradientStop Color="#569CF7" Offset="1.0" />
+										</LinearGradientBrush>
+									</Setter.Value>
+								</Setter>
+							</DataTrigger>
+							<DataTrigger Binding="{Binding IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" Value="False">
+								<Setter Property="Background">
+									<Setter.Value>
+										<LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+											<GradientStop Color="#999999" Offset="0.0" />
+											<GradientStop Color="#707070" Offset="1.0" />
+										</LinearGradientBrush>
+									</Setter.Value>
+								</Setter>
+							</DataTrigger>
+						</Style.Triggers>
+					</Style>
+				</Border.Style>
 			</Border>
 		</Grid>
-	</Border>
+		<Grid
+			Name="markersGrid"
+			Margin="1">
+		</Grid>
+	</Grid>
 </UserControl>
