--- a/VidCoder/Controls/RangeBar.xaml
+++ b/VidCoder/Controls/RangeBar.xaml
@@ -10,7 +10,8 @@
 	MouseRightButtonUp="ChapterBar_OnMouseRightButtonUp"
 	MouseMove="ChapterBar_OnMouseMove"
 	mc:Ignorable="d" 
-	d:DesignHeight="41" d:DesignWidth="300">
+	d:DesignHeight="41" d:DesignWidth="300"
+	Focusable="True">
 	<UserControl.Resources>
 		<Style x:Key="SeekBarTick" TargetType="Polygon">
 			<Setter Property="Points" Value="0,0 0,3 1,3 1,0" />
