Allowed setting motion estimation range under Hexagon and Diamond modes. Added Windows Phone 8 preset. Fixed suggested preset name when using "Save As" under a built-in preset.
--HG--
branch : beta

--- a/VidCoder/View/ChoosePresetName.xaml
+++ b/VidCoder/View/ChoosePresetName.xaml
@@ -9,7 +9,9 @@
 	TextOptions.TextFormattingMode="Display">
 	<Grid>
 		<TextBlock Margin="12,12,0,0" VerticalAlignment="Top" Text="{x:Static res:MiscRes.ChoosePresetName}" HorizontalAlignment="Left" TextWrapping="Wrap"/>
-		<TextBox Margin="12,43,12,0" Name="presetNameText" Text="{Binding PresetName, UpdateSourceTrigger=PropertyChanged}" Height="23" VerticalAlignment="Top" />
+		<TextBox 
+			Margin="12,43,12,0" Name="presetNameText" Text="{Binding PresetName, UpdateSourceTrigger=PropertyChanged}" Height="23" VerticalAlignment="Top"
+			VerticalContentAlignment="Center"/>
 
 		<StackPanel
 			Orientation="Horizontal"
