Updated HandBrake core to SVN 5184.
--HG--
branch : beta

--- a/VidCoder/Controls/TimeBox.xaml
+++ b/VidCoder/Controls/TimeBox.xaml
@@ -9,7 +9,7 @@
 	<Grid>
 		<TextBox
 			Name="timeBox"
-			VerticalContentAlignment="Center" HorizontalContentAlignment="Right"
+			VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
 			GotFocus="TimeBoxGotFocus" LostFocus="TimeBoxLostFocus" PreviewTextInput="TimeBoxPreviewTextInput" PreviewKeyDown="TimeBoxPreviewKeyDown" TextChanged="TimeBoxTextChanged" />
 	</Grid>
 </UserControl>
