--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -33,7 +33,6 @@
 	<Window.Resources>
 		<converters:ChapterVMConverter x:Key="ChapterVMConverter" />
 		<local:EnumDisplayer Type="{x:Type Encoding:VideoEncoder}" x:Key="VideoEncoderChoices" />
-		<local:EnumDisplayer Type="{x:Type localmodel:VideoRangeTypeCombo}" x:Key="VideoRangeTypeChoices" />
 		<Color x:Key="SectionBackgroundTopColor">#F5F5F5</Color>
 		<Color x:Key="SectionBackgroundBottomColor">#EAEAEA</Color>
 		<LinearGradientBrush x:Key="SectionBackground" StartPoint="0,0" EndPoint="0,1">
@@ -149,8 +148,8 @@
 			<TextBlock Text="{Binding Job.Title}"
 				Style="{StaticResource QueueText}" />
 		</DataTemplate>
-		<DataTemplate x:Key="QueueTemplateChapters">
-			<TextBlock Text="{Binding ChaptersDisplay}"
+		<DataTemplate x:Key="QueueTemplateRange">
+			<TextBlock Text="{Binding RangeDisplay}"
 				Style="{StaticResource QueueText}" />
 		</DataTemplate>
 		<DataTemplate x:Key="QueueTemplateDestination">
@@ -635,11 +634,12 @@
 								Name="rangeUI"
 								Orientation="Horizontal"
 								Background="Transparent">
+								<!-- Range type -->
 								<ComboBox
 									Height="23" VerticalAlignment="Center" Margin="0,0,10,0" HorizontalAlignment="Left"
 									MinWidth="92"
-									ItemsSource="{Binding DisplayNames, Source={StaticResource VideoRangeTypeChoices}}"
-									SelectedValue="{Binding RangeType, Converter={StaticResource VideoRangeTypeChoices}}" />
+									ItemsSource="{Binding RangeTypeChoices}" DisplayMemberPath="Display" SelectedValuePath="Value"
+									SelectedValue="{Binding RangeType}" />
 
 								<!-- Chapters range -->
 								<StackPanel
