--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -164,6 +164,8 @@
 			<GradientStop Color="#125599" Offset="0" />
 			<GradientStop Color="#125599" Offset="1" />
 		</RadialGradientBrush>
+		<SolidColorBrush x:Key="GreenHoverFill" Color="#00AF00" />
+		<SolidColorBrush x:Key="GreenPressFill" Color="DarkGreen" />
 		<Grid x:Key="RedX" Background="Transparent">
 			<Rectangle Name="rect2" Width="14" Height="3" Fill="{StaticResource RedFill}">
 				<Rectangle.LayoutTransform>
@@ -254,13 +256,13 @@
 						</Grid>
 						<ControlTemplate.Triggers>
 							<Trigger Property="IsMouseOver" Value="True">
-								<Setter TargetName="rect1" Property="Fill" Value="{StaticResource BlueHoverFill}" />
-								<Setter TargetName="rect2" Property="Fill" Value="{StaticResource BlueHoverFill}" />
+								<Setter TargetName="rect1" Property="Fill" Value="{StaticResource GreenHoverFill}" />
+								<Setter TargetName="rect2" Property="Fill" Value="{StaticResource GreenHoverFill}" />
 								<Setter TargetName="hoverBorder" Property="Visibility" Value="Visible" />
 							</Trigger>
 							<Trigger Property="IsPressed" Value="True">
-								<Setter TargetName="rect1" Property="Fill" Value="{StaticResource BluePressFill}" />
-								<Setter TargetName="rect2" Property="Fill" Value="{StaticResource BluePressFill}" />
+								<Setter TargetName="rect1" Property="Fill" Value="{StaticResource GreenPressFill}" />
+								<Setter TargetName="rect2" Property="Fill" Value="{StaticResource GreenPressFill}" />
 							</Trigger>
 						</ControlTemplate.Triggers>
 					</ControlTemplate>
